# ctx2doc

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/skills/ctx2doc/: SKILL.md
.codex/skills/ctx2doc/agents/: openai.yaml
.github/workflows/: ci.yml  publish.yml
ctx2doc/: __main__.py  claude_adapter.py  cli.py  codex_adapter.py  config.py  installers.py  mcp_server.py  models.py  redaction.py  session_adapters.py  snapshot.py
tests/: test_claude_adapter.py  test_codex_adapter.py  test_installers.py  test_mcp_server.py  test_redaction.py  test_snapshot_service.py
